sort.pancake.GatesPancake.scala.error
Compilation error:
GatesPancake:13: warning: enclosing method isFirst has result type Unit: return value discarded
  return getPancakeRadius(pancake)
  ^GatesPancake:12: error: method isFirst is defined twice
  conflicting symbols both originated in file 'plm.runtime1.GatesPancake'
def isFirst(pancake : Int){
    ^