sort.pancake.GatesPancake.scala.code
def solve() {
}









def isFirst(pancake : Int){
  return getPancakeRadius(pancake)
}
